Fixed .env, fixed shared types, fixed worker
